<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/meter_pic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1000:625"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/speed_meter" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/secondinput"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:background="@color/edittextbg"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint2"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/clearbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meterinput"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/meterinput"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:background="@color/edittextbg"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint1"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/secondinput"
        app:layout_constraintEnd_toEndOf="@+id/secondinput"
        app:layout_constraintStart_toStartOf="@+id/secondinput"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/clearbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/clear"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/calbutton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/secondinput"
        app:layout_constraintTop_toBottomOf="@+id/secondinput" />

    <Button
        android:id="@+id/calbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="@+id/clearbutton"
        app:layout_constraintEnd_toEndOf="@+id/secondinput"
        app:layout_constraintStart_toEndOf="@+id/clearbutton"
        app:layout_constraintTop_toTopOf="@+id/clearbutton" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/average_speed_km_h"
        android:textColor="#FF0000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toEndOf="@+id/secondinput"
        app:layout_constraintStart_toStartOf="@+id/secondinput"
        app:layout_constraintTop_toBottomOf="@+id/clearbutton" />

    <TextView
        android:id="@+id/result"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="25dp"
        android:contentDescription="@string/bull_pic"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@drawable/red_cow" />

</androidx.constraintlayout.widget.ConstraintLayout>